// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component sanity matches default snapshot 1`] = `
.c2 {
  color: #4E3FCE;
}

.c2 {
  box-sizing: border-box;
}

.c1 {
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.5;
  text-align: left;
  color: #4E3FCE;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #7165d7;
}

.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e32a4;
}

<div
  class="c0 c1 c2"
  color="primary"
  font-family="sansSerif"
  font-size="1"
  font-weight="3"
/>
`;

exports[`Link component sanity matches themed snapshot 1`] = `
.c3 {
  color: #4E3FCE;
}

.c3 {
  box-sizing: border-box;
}

.c2 {
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.5;
  text-align: left;
  color: #4E3FCE;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #7165d7;
}

.c1:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e32a4;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <div
    class="c1 c2 c3"
    color="primary"
    font-family="sansSerif"
    font-size="1"
    font-weight="3"
  />
</div>
`;
